server/server-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
spec:
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 31102
  selector:
    app: todo-server-app
  type: LoadBalancer
